# quantool

./: .gitignore  README.md  influxdb.py  influxdb_client3.py  mongo_db.py  pyproject.toml  setup.py
docs/source/: conf.py  index.rst  modules.rst  quantool.rst
quantool/: __init__.py  dev.ipynb  get_option.py  io.py  option.py  query_yahoo.py  sabr.py  show_option.py  stdout_conf.yaml  test_sabr.py  watch_market.py  watch_market.yaml
quantool/api/: ibkr.py  ibkr_ws.py  ws_client.py  ws_server.py
quantool/backtest/: __init__.py  datafeed.py  engine.py  event.py  execution.py  portfolio.py  strategy.py  visualization.py
quantool/binance/: api.ipynb
quantool/datasets/: datasets.py
quantool/notebook/: rnn_p.ipynb
quantool/plot/: plot.py
quantool/research/: summary.py
quantool/tests/: test_option.py
tests/: conftest.py  test_option.py
